Thu Dec 02 3:00:00 2004  Tim Showalter  <tjs@psaux.com>

	* Updated Mac builds; currently, things seem to build with only
	  one config setting (--with-mac-target=darwin).
	* Make it unnecessary to have '.' in one's path when building.
	* bootstrap now checks for 'libtoolize' in both places, not 'libtool'
	  (My Debian system has no 'libtool', but my Mac does, and it's
	  not actually related to GNU libtool.)
	* boostrap now moves configure.in aside to shut up all the programs
	  that worry about configure.in's presence.
	* Fink now detected; --with-fink will default to /sw, as the
	  help claimed it did.
	* Default Mac build type is now darwin, since we have no carbon build.

Thu Nov 25 12:27:09 2004  Loic Dachary  <loic@gnu.org>

	* "Nick Wilton" <info@nickwilton.info> header patches + Makefiles for compilation on windows

Mon Nov 15 20:20:43 2004  Loic Dachary  <loic@gnu.org>

	* poker-eval.spec.in: by Jean-Christophe Duberga <jeanchristophe.duber@free.fr>

Sun Nov 07 15:53:27 2004  Loic Dachary  <loic@gnu.org>

	* Release 0.124
	
	* include/enumerate.h: apply macro/comma related patch from Martin Stjernholm
	  http://sourceforge.net/mailarchive/forum.php?thread_id=5586390&forum_id=40226

Sun Nov 07 13:55:00 2004  Loic Dachary  <loic@gnu.org>

	* WHATS-HERE.Java: cut/paste java related stuff from WHATS-HERE

	* WHATE-HERE, README: review and update
	
	* test/digest[57].c: rewrite into enumtest[57] to get rid of md5 
	  dependency
	
	* lib/*md5*,include/md5.h: license problem and do not belong here
	
	* include/{,inlines/}*.h: add or update copyright notice at the beginning of the file.
	  Add POKEREVAL_EXPORT markers to extern symbols, include pokereval_export.h when
	  doing so. Add multiple inclusion guards when missing.
	
	* include/enumerate.h: random is called rand if WIN32 is defined

	* include/pokereval_export.h: add file to cope with
	  POKEREVAL_EXPORT keyword made to enable the use of poker-eval as
	  a shared library on windows.
