@@ -39,13 +39,13 @@ have_autoconf=false
 if autoconf --version < /dev/null > /dev/null 2>&1 ; then
 	autoconf_version=`autoconf --version | grep 'autoconf (GNU Autoconf)' | sed 's/^[^0-9]*\([0-9].[0-9.]*\).*/\1/'`
 	case $autoconf_version in
-		2.5[4-9])
+		2.5[3-9])
 			have_autoconf=true
 			;;
 	esac
 fi
 if $have_autoconf ; then : ; else
-	echo "You need autoconf >= 2.54 installed to compile $PROJECT."
+	echo "You need autoconf >= 2.53 installed to compile $PROJECT."
 	DIE=1
 fi
 
